# RGBConverter

./: CMakeLists.txt  README.md  RGBConverter.cpp  RGBConverter.h  main.cpp
